# ShoDaIgram

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  data-engineering-ci.yml  frontend-ci.yml
backend/: build.gradle.kts  cleanup-test-db.sh  compose.yaml  run-etl-test-db.sh
backend/config/detekt/: detekt.yml
backend/src/main/resources/: application-dev.yml  application-test.yml  application.yml
data-engineering/: .env.sample  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
data-engineering/src/sho_da_igram/api/: api_client.py  igdb_client.py
data-engineering/src/sho_da_igram/data/: fetcher.py
data-engineering/src/sho_da_igram/scraping/: game_scraper.py
data-engineering/src/sho_da_igram/utils/: config.py  get_token.py  utils.py
frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/common/: emptyState.tsx  errorDisplay.tsx  highlightedText.tsx  loadingSpinner.tsx  pageContainer.tsx  pagination.tsx  styled.ts
frontend/src/components/game/: gameCard.tsx  gameGrid.tsx  matchReasonBadge.tsx  styled.ts  tagFilter.tsx
frontend/src/components/layout/: appHeader.tsx  appLayout.tsx  styled.ts
frontend/src/components/search/: gameImageCarousel.tsx  searchBar.tsx  styled.ts
frontend/src/hooks/: useRecentSearches.tsx  useToast.tsx
frontend/src/hooks/queries/: useFeaturedGames.ts  useGame.ts  useGames.ts  useSearchGames.ts  useSimilarGames.ts  useTags.ts
frontend/src/pages/: gameBrowserPage.tsx  gameDetailPage.tsx  homePage.tsx  searchPage.tsx  similarGamesPage.tsx  styled.ts
frontend/src/services/: api.ts  gameService.ts  tagService.ts
frontend/src/theme/: theme.ts
frontend/src/types/: api.types.ts  game.types.ts  recommendation.types.ts  styled.d.ts
frontend/src/utils/: appConstants.ts  colors.ts
(+69 files in other folders)
